--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.4",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "eslint": "^8",
